--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="js" lang="">
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title></title>
-  <meta name="description" content="">
+  <title>CNUT</title>
+  <meta name="description" content="archival platform for the internet">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link href="./css/main.css" type = "text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -23,47 +22,86 @@
 
   <!-- Add your site or application content here -->
 
-  <!--outer_div size set to cover full screen so inner divs sizes can be set relative to this-->
-  <div style="background-color: black; position: fixed; display: block; height: 100%; width: 100%; left: 0; top: 0; z-index: 10;; overflow: auto;">
 
-    <!--top_div will take up 9% of outer_div(height)-->
-    <div style="background-color: black; width: 80%; height: 9%; margin: auto; min-height: 69.12px;">
+  <h1 class="banner">
+  	CNUT Wiki
+  </h1>
 
-      <!--div for the website name and login/settings takes up 60% of top_div(width)-->
-      <div style="background-color: blue; width: 60%; height: 100%; float: left; position: static; display: block;">
-        <h1>Name</h1> 
-      </div>
+  <div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="./bertovone.html" type="html">Hot</a>
+    <a href="#contact">Archive</a>
+    <input type="text" placeholder="Search...">
+  </div>
+  
+  <div class="content">
+  	<div class="slideshow-container">
 
-      <!--div for the login/settings takes up 40% of top_div(width) -->
-      <div style="background-color: yellow; width: 40%; height: 100%; float: left; position: static; display: block;">
-        <h1>Login/Settings</h1>
-      </div>
-    </div>
+		<div class="mySlides fade">
+  			<div class="numbertext">1 / 3</div>
+  			<iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
+			height="500px" src="https://www.youtube.com/embed/D6ryrdWb4yU"></iframe>
+		</div>
 
-    <!--content_div will take up 85% of outer_div(height)-->
-    <div style="background-color: black; width: 80%; height: 85%; margin: auto; min-height: 652.8px">
+		<div class="mySlides fade">
+  			<div class="numbertext">2 / 3</div>
+  			<iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
+			height="500px" src="https://www.youtube.com/embed/Vn9mIio67lw"></iframe>
+		</div>
 
-      <!--highlights on left using 60% of content_div(width)-->
-      <div style="background-color: red; width: 60%; height: 100%; float: left; position: static; display: block;">
-        <h1>Yuh</h1>
-      </div>
+		<div class="mySlides fade">
+  			<div class="numbertext">3 / 3</div>
+  			<iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
+			height="500px" src="https://www.youtube.com/embed/WBP6OUBWL3k"></iframe>
+		</div>
 
-      <!--more posts on right using 40% of content_div(width)-->
-      <div style="background-color: purple; width: 40%; height: 100%; float: left; position: static; display: block;">
-        <h1>Meh</h1>
-      </div>
-    </div>
-
-    <!--footer_div will take up 6& of outer_div(height)-->
-    <div style="background-color: green; width: 80%; height: 6%; margin: auto; min-height: 46.08px;">
-
-      <!--extra div used to maintain structure(fills up footer_div)-->
-       <div style="background-color: green; width: 100%; height: 100%; position: static; display: inline-block;">
-        <footer>Info</footer>
-      </div>
-    </div>
+		<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+		<a class="next" onclick="plusSlides(1)">&#10095;</a>
+	</div>
+	<br>
+	<div style="text-align:center">
+		<span class="dot" onclick="currentSlide(1)"></span> 
+		<span class="dot" onclick="currentSlide(2)"></span> 
+		<span class="dot" onclick="currentSlide(3)"></span> 
+	</div>
+</div>
+  	<h2>Featured</h2>
+  	<h2>Most Recent</h2>
   </div>
 
+  <footer>
+  	<h4>ABOUT US</h4>
+  </footer>
+
+  <!-- script for slideshow -->
+  <script>
+	var slideIndex = 1;
+		showSlides(slideIndex);
+
+	function plusSlides(n) {
+  		showSlides(slideIndex += n);
+	}
+
+	function currentSlide(n) {
+  		showSlides(slideIndex = n);
+	}
+
+  function showSlides(n) {
+	  	var i;
+	  	var slides = document.getElementsByClassName("mySlides");
+	  	var dots = document.getElementsByClassName("dot");
+	  	if (n > slides.length) {slideIndex = 1}    
+	  	if (n < 1) {slideIndex = slides.length}
+	  	for (i = 0; i < slides.length; i++) {
+	  		slides[i].style.display = "none";  
+	  	}
+	  	for (i = 0; i < dots.length; i++) {
+	      		dots[i].className = dots[i].className.replace(" active", "");
+	 	}
+	  	slides[slideIndex-1].style.display = "block";  
+	  	dots[slideIndex-1].className += " active";
+	}
+</script>
 
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
@@ -78,4 +116,5 @@
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
+
 </html>
