--- a/index.html
+++ b/index.html
@@ -37,32 +37,32 @@
   <div class="content">
     <div class="slideshow-container">
 
-    <div class="mySlides fade">
-        <div class="numbertext">1 / 3</div>
-        <iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
-      height="500px" src="https://www.youtube.com/embed/D6ryrdWb4yU"></iframe>
-    </div>
+    	<!-- links -->
+	    <div class="mySlides">
+	        <iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
+	      height="500px" src="https://www.youtube.com/embed/D6ryrdWb4yU"></iframe>
+	    </div>
+	    <div class="mySlides">
+	        <iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
+	      height="500px" src="https://www.youtube.com/embed/Vn9mIio67lw"></iframe>
+	    </div>
+	    <div class="mySlides">
+	        <iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
+	      height="500px" src="https://www.youtube.com/embed/WBP6OUBWL3k"></iframe>
+	    </div>
 
-    <div class="mySlides fade">
-        <div class="numbertext">2 / 3</div>
-        <iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
-      height="500px" src="https://www.youtube.com/embed/Vn9mIio67lw"></iframe>
-    </div>
+	    <!-- side arrows -->
+	    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+	    <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
-    <div class="mySlides fade">
-        <div class="numbertext">3 / 3</div>
-        <iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
-      height="500px" src="https://www.youtube.com/embed/WBP6OUBWL3k"></iframe>
-    </div>
-
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  <br>
-  <div style="text-align:center">
-    <span class="dot" onclick="currentSlide(1)"></span> 
-    <span class="dot" onclick="currentSlide(2)"></span> 
-    <span class="dot" onclick="currentSlide(3)"></span> 
+	    <br>
+	    <!-- dots -->
+		<div style="text-align:center">
+		  <span class="dot" onclick="currentSlide(1)"></span> 
+		  <span class="dot" onclick="currentSlide(2)"></span> 
+		  <span class="dot" onclick="currentSlide(3)"></span> 
+		</div>
+	</div>
   </div>
 
   <!-- script for slideshow -->
