--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
 
   <h1 class="banner">
-    CNUT Wiki
+    CNUT WIKI
   </h1>
 
-  <div class="navbar">
-    <a href="#home">Home</a>
-    <a href="#news">Hot</a>
+  <div class="topnav">
+    <a class="active" href="#home">Home</a>
+    <a href="./bertovone.html" type="html">Hot</a>
     <div class="dropdown">
       <button class="dropbtn">Archive 
         <i class="fa fa-caret-down"></i>
@@ -65,71 +65,68 @@
         </div>
       </div>
     </div> 
-    <input style="float:right; margin-top: .9rem" type="text" placeholder="Search..">
+    <input type="text" placeholder="Search...">
   </div>
   
-
   <div class="content">
 
-    <div class="featured">
-      <h2 class="title">Featured</h2>
-      <div class="slideshow-container">
-        <!-- links -->
-        <div class="mySlides">
-            <iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
-          height="500rem" src="https://www.youtube.com/embed/D6ryrdWb4yU"></iframe>
-        </div>
-        <div class="mySlides">
-            <iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
-          height="500rem" src="https://www.youtube.com/embed/Vn9mIio67lw"></iframe>
-        </div>
-        <div class="mySlides">
-            <iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
-          height="500rem" src="https://www.youtube.com/embed/WBP6OUBWL3k"></iframe>
-        </div>
+  	<div class="featured">
+	  	<h2 class="title">Featured</h2>
+	    <div class="slideshow-container">
+	    	<!-- links -->
+		    <div class="mySlides">
+		        <iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
+		      height="500rem" src="https://www.youtube.com/embed/D6ryrdWb4yU"></iframe>
+		    </div>
+		    <div class="mySlides">
+		        <iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
+		      height="500rem" src="https://www.youtube.com/embed/Vn9mIio67lw"></iframe>
+		    </div>
+		    <div class="mySlides">
+		        <iframe allowfullscreen="allowfullscreen" align="center" width="100%" 
+		      height="500rem" src="https://www.youtube.com/embed/WBP6OUBWL3k"></iframe>
+		    </div>
 
-        <!-- side arrows -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+		    <!-- side arrows -->
+		    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+		    <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
-        <!-- dots -->
-      <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span> 
-        <span class="dot" onclick="currentSlide(2)"></span> 
-        <span class="dot" onclick="currentSlide(3)"></span> 
-      </div>
-    </div>
+		    <!-- dots -->
+			<div style="text-align:center">
+			  <span class="dot" onclick="currentSlide(1)"></span> 
+			  <span class="dot" onclick="currentSlide(2)"></span> 
+			  <span class="dot" onclick="currentSlide(3)"></span> 
+			</div>
+		</div>
     </div>
 
     <div class="recent">
       <h2 class="title">Recent Posts</h2>
       <table>
-        <tr>
-          <a target="_blank" href="./ksg.jpg" type="html">
-            <img class = "articlewindow" src="./ksg.jpg" alt="article">
-          </a>
-        </tr>
-        <br>
-        <tr>
-          <a target="_blank" href="./ksg.jpg" type="html">
-            <img class = "articlewindow" src="./ksg.jpg" alt="article">
-          </a>
-        </tr>
-        <br>
-        <tr>
-          <a target="_blank" href="./ksg.jpg" type="html">
-            <img class = "articlewindow" src="./ksg.jpg" alt="article">
-          </a>
-        </tr>
+      	<tr>
+      		<a target="_blank" href="./ksg.jpg" type="html">
+      		  <img class = "articlewindow" src="./ksg.jpg" alt="article">
+      		</a>
+      	</tr>
+      	<br>
+      	<tr>
+      		<a target="_blank" href="./ksg.jpg" type="html">
+      		  <img class = "articlewindow" src="./ksg.jpg" alt="article">
+      		</a>
+      	</tr>
+      	<br>
+      	<tr>
+      		<a target="_blank" href="./ksg.jpg" type="html">
+      		  <img class = "articlewindow" src="./ksg.jpg" alt="article">
+      		</a>
+      	</tr>
       </table>
     </div>
-
   </div>
 
   <footer class="footer">
-    <h4>ABOUT</h4>
+  	<h4>ABOUT</h4>
   </footer>
-
 
 
   <!-- script for slideshow -->
@@ -159,6 +156,7 @@
   }
 </script>
 
+  <!-- boilerplate scripts -->
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
