--- a/archive.html
+++ b/archive.html
@@ -34,36 +34,7 @@
       <button class="dropbtn">Archive 
         <i class="fa fa-caret-down"></i>
       </button>
-      <div class="dropdown-content">
-        <div class="row">
-          <div class="column">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-          </div>
-          <div class="column">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-          </div>
-          <div class="column">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-          </div>
-          <div class="column">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-          </div>
-          <div class="column">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-          </div>
-          <a style="float: right; color: black;">See more...</a>
-        </div>
-      </div>
+     
     </div> 
     <input type="text" placeholder="Search...">
   </div>
@@ -75,7 +46,7 @@
         <tr>
          <td>
            <a target="_blank" href="./ksg.jpg" type="html">
-            <img class = "articlewindow" src="./ksg.jpg" alt="article">
+            <img class = "articlewindow" src="./sports.jpg" alt="article">
           </a>
            
          </td>
