--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a class="active" href="#home">Home</a>
     <a href="./bertovone.html" type="html">Hot</a>
     <div class="dropdown">
-      <button class="dropbtn">Archive 
+      <button class="dropbtn"><a href="./archive.html" type="html">Archive</a> 
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
@@ -39,29 +39,24 @@
           <div class="column">
             <a href="#">Link 1</a>
             <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
           </div>
           <div class="column">
             <a href="#">Link 1</a>
             <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
           </div>
           <div class="column">
             <a href="#">Link 1</a>
             <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
           </div>
           <div class="column">
             <a href="#">Link 1</a>
             <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
           </div>
           <div class="column">
             <a href="#">Link 1</a>
             <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
           </div>
-          <a style="float: right; color: black;">See more...</a>
+          <a href = "./archive.html" type ="html" style="float: right; background-color: inherit; color: black">More...</a>
         </div>
       </div>
     </div> 
