--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <input type="text" placeholder="Search...">
 
-    <a href="login.html" type="html" class="acctlinks">Login</a>
+    <a href="login.php" type="html" class="acctlinks">Login</a>
     <a href="registration.php" type="html" class="acctlinks">Sign Up</a>
   </div>
   
