--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   </h1>
 
   <div class="topnav">
-    <a class="active" href="#home">Home</a>
-    <a href="./bertovone.html" type="html">Hot</a>
+    <a class="active" href="index.html">Home</a>
+    <a href="hot.html">Hot</a>
     <div class="dropdown">
-      <button class="dropbtn"><a href="./archive.html" type="html">Archive</a>
+      <button class="dropbtn"><a href="archive.html">Archive</a>
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-content">
